--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		
 
         <div style="position: fixed; top: 50%; left: 50%; transform: translate(-50%, -50%);">
-            <button id="randomButton" onclick="randomGeometry()" style="min-width: 200px; font-size: 24px; font-weight: bold; border: 4px solid #ffffff87; background-color: #0b99fe51; padding: 20px; cursor: pointer; text-transform: uppercase;">Explore Geometry</button>
+            <button id="randomButton" onclick="randomGeometry()" style="min-width: 200px; font-size: 24px; font-weight: bold; border: 4px solid #ffffff87; background-color: #0b99fe51; padding: 20px; cursor: pointer; text-transform: uppercase">Explore Geometry</button>
         </div>
         
         
@@ -145,7 +145,7 @@
 
 				//
 
-				const texture = new THREE.TextureLoader().load( 'textures/sprites/disc.png' );
+				const texture = new THREE.TextureLoader().load( 'https://www.exploregeometry.xyz/textures/sprites/disc.png' );
 				texture.wrapS = THREE.RepeatWrapping;
 				texture.wrapT = THREE.RepeatWrapping;
 
